; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_vc_egl_ctx.c_gfx_ctx_vc_bind_api.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_vc_egl_ctx.c_gfx_ctx_vc_bind_api.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vc_api = common dso_local global i32 0, align 4
@EGL_OPENGL_API = common dso_local global i32 0, align 4
@EGL_OPENGL_ES_API = common dso_local global i32 0, align 4
@EGL_OPENVG_API = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32, i32)* @gfx_ctx_vc_bind_api to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gfx_ctx_vc_bind_api(i8* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* %9, align 4
  %13 = load i32, i32* %7, align 4
  store i32 %13, i32* @vc_api, align 4
  %14 = load i32, i32* %7, align 4
  switch i32 %14, label %24 [
    i32 130, label %15
    i32 129, label %18
    i32 128, label %21
  ]

15:                                               ; preds = %4
  %16 = load i32, i32* @EGL_OPENGL_API, align 4
  %17 = call i32 @eglBindAPI(i32 %16)
  store i32 %17, i32* %5, align 4
  br label %26

18:                                               ; preds = %4
  %19 = load i32, i32* @EGL_OPENGL_ES_API, align 4
  %20 = call i32 @eglBindAPI(i32 %19)
  store i32 %20, i32* %5, align 4
  br label %26

21:                                               ; preds = %4
  %22 = load i32, i32* @EGL_OPENVG_API, align 4
  %23 = call i32 @eglBindAPI(i32 %22)
  store i32 %23, i32* %5, align 4
  br label %26

24:                                               ; preds = %4
  br label %25

25:                                               ; preds = %24
  store i32 0, i32* %5, align 4
  br label %26

26:                                               ; preds = %25, %21, %18, %15
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32 @eglBindAPI(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
